[gd_scene load_steps=9 format=3 uid="uid://d2ab3kqyv5xno"]

[ext_resource type="Script" path="res://scenes/animation_test.gd" id="1_anim_test"]
[ext_resource type="Script" path="res://character/humanoid/humanoid_character.gd" id="2_humanoid"]
[ext_resource type="Script" path="res://character/humanoid/humanoid_animator.gd" id="3_animator"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.1, 0.1, 0.2, 1)
sky_horizon_color = Color(0.2, 0.15, 0.3, 1)
ground_bottom_color = Color(0.05, 0.05, 0.1, 1)
ground_horizon_color = Color(0.1, 0.1, 0.15, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.3, 0.4, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_1"]
size = Vector2(8, 8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.15, 0.15, 0.2, 1)
metallic = 0.3
roughness = 0.7

[node name="AnimationTest" type="Node3D"]
script = ExtResource("1_anim_test")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.25, 0.433, 0, 0.866, 0.5, -0.5, -0.433, 0.75, 3, 5, 3)
light_color = Color(1, 0.95, 0.9, 1)
light_energy = 1.2
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.985, 0.174, 0, -0.174, 0.985, 0, 1.2, 3)
fov = 50.0

[node name="HumanoidCharacter" type="Node3D" parent="."]
script = ExtResource("2_humanoid")

[node name="HumanoidAnimator" type="Node" parent="HumanoidCharacter"]
script = ExtResource("3_animator")

[node name="AnimLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)
pixel_size = 0.005
text = "Animation Test"
font_size = 48
horizontal_alignment = 1

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.01, 0)
mesh = SubResource("PlaneMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="Instructions" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -2)
pixel_size = 0.003
text = "Controls:
Left/Right: Change animation
Up/Down: Change category
1-5: Jump to category
Space: Pause/Resume
R: Randomize character"
font_size = 32
horizontal_alignment = 1
